// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders without crashing 1`] = `
<div
  className="App"
>
  <h1>
    React Wars
  </h1>
  <h1>
    React Wars - Star Wars
  </h1>
  <div
    className="sc-ifAKCX dHcTOt"
  />
</div>
`;

exports[`<App /> renders without crashing 2`] = `
<div
  className="App"
>
  <h1>
    React Wars
  </h1>
  <h1>
    React Wars - Star Wars
  </h1>
</div>
`;
